new chapter for msg managers and threads

--- a/doc/converse/manual.tex
+++ b/doc/converse/manual.tex
@@ -53,6 +53,11 @@
 \input{scheduler}
 \input{queue}
 \input{cmi}
+\chapter{Message storage/retrieval and Threads}
+
+The calls in this chapter can be used to put together runtime systems
+for languages that support threads and tag-based message retrieval.
+
 \input{msgmgr}
 \input{threads}
 %\input{thsync}
