--- a/doc/install/run.tex
+++ b/doc/install/run.tex
@@ -12,8 +12,204 @@
 % REVISION HISTORY:
 %
 % $Log$
-% Revision 1.1  1995-10-31 22:27:53  milind
+% Revision 1.2  1995-11-16 19:05:03  milind
+% *** empty log message ***
+%
+% Revision 1.1  1995/10/31  22:27:53  milind
 % Initial revision
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section[Executing Charm Programs]{Executing Charm programs}
+\label{executing charm programs}
+
+The Charm linker produces one executable file.  On machines with a host
+(such as a network of workstations), a link to the proper host program
+{\fexec conv-host} is created in the user program directory.  Sample
+execution examples are given below (the executable is called {\fparm
+pgm}). Exact details will differ from site to site.  The list of Charm
+command line options is in Section~\ref{command line options}.
+
+\begin{itemize}
+
+\item \underline{\bf CM-5:} 
+	\begin{tabbing}
+	{\fexec pgm}
+	\end{tabbing}
+	will run program {\fparm pgm} interactively from one of the partition 
+	managers.  For programs with large resource requirements, use the utilities
+	{\fexec jrun} and {\fexec jstat}. See the man pages at your site for
+	more information. Also, the {\fexec +pN} option is recognized and runs {\fexec pgm} on {\fexec N} processors.
+
+\item \underline{\bf nCUBE/2:} 
+	\begin{tabbing}
+	{\fexec xnc -d4 pgm}
+	\end{tabbing}
+	runs {\fparm pgm} on a hypercube of dimension 4 (i.e. on 16 processors). 
+
+\item \underline{\bf Paragon:} 
+	\begin{tabbing}
+	{\fexec pexec pgm -sz 4}
+	\end{tabbing}
+	runs {\fparm pgm} on four processors.
+
+\item \underline{\bf Network of workstations:} 
+	\begin{tabbing}
+	{\fexec conv-host pgm +p4}
+	\end{tabbing}
+	executes {\fparm pgm} on 4 nodes.  In a network environment, Charm must
+	be able to locate the directory of the executable.  If all workstations
+	share a common file name space this is trivial.  If they don't, Charm
+	will attempt to find the executable in a directory with the same path
+	from the {\bf \$HOME} directory.  Pathname resolution is performed as 
+	follows:
+	\begin{enumerate}
+		\item The system computes the absolute path of {\fexec pgm}.
+		\item If the absolute path starts with the equivalent of {\bf \$HOME} 
+			or the current working directory, the beginning part of the path 
+			is replaced with the environment variable {\bf \$HOME} or the 
+			current working directory.
+		\item The system tries to locate this program (with modified 
+			pathname) on all nodes.
+	\end{enumerate}
+
+The list of nodes must be specified in a file, with one node entry per
+line, each entry being in the format:
+
+{\fexec nodename [username] [passwd] [setup\_command]}
+
+The {\fparm nodename} must be specified completely (e.g. sparc1.cs.uiuc.edu).
+The {\fparm username} is optional; if the login id on that node is the
+same as the current login id, it need not be specified.
+The {\fparm password} argument is ignored in the current implementation.
+The {\fparm setup\_command} is optional; if specified,
+the command is executed on the corresponding node before the program 
+begins execution. The {\bf *} character may be used as a
+placeholder for an absent argument.
+The number of nodes specified in the nodes file must not be less
+than the number of nodes specified with the {\fexec +p} command
+line option. If the number of nodes specified in the nodes file is
+less than the number of nodes specified with the {\fexec +p} option,
+{\fexec +p} entries in the nodes file will be used in succession, starting
+with the first entry in the file.
+The name of the nodes fil\index{nodes file}\index{.nodes} itself is
+obtained by  {\fexec conv-host} in the following order:
+\begin{enumerate}
+\item	From the command line option {\fexec ++nodesfile}.
+\item	If the {\fexec ++nodesfile} option is not given, the value of the 
+environment variable {\fexec NODES} is taken to be the nodes file.
+\item	If the environment variable {\fexec NODES} is not set, the file 
+{\fparm .nodes}\index{.nodes}\index{nodes file} in the user's home directory is taken 
+to be the nodes file.
+\item	If the above file does not exist, the file 
+{\fparm .nodes}\index{.nodes}\index{nodes file} in the current
+directory is used as  the nodes file.
+\end{enumerate}
+The user is required to set up remote login permissions on all nodes
+using the .rhosts file in the home directory.
+
+\end{itemize}
+
+Note that the Charm linker will provide the correct 
+executable. The user, however, needs to know how programs are run for
+the particular machine.
+
+
+
+\subsection[Command Line Options]{Command Line Options}
+\label{command line options}
+\index{command line options}
+
+A Charm program accepts the following command line options:
+\begin{description}
+\item[{\fexec +pN}] Run the program with N processors. The default is 1.
+Note that on some nonshared memory machines, e.g., nCUBE/2, the user must
+specify the number of processors using the command provided for that
+machine (e.g. {\fexec xnc} on the nCUBE/2).
+In such cases the {\fexec +p} option is ignored.
+%\item[{\fexec +mM}] Run the program with M Kwords of memory per
+%processor. The default is 50 Kwords of memory per processor.
+%\item[{\fexec +mmM}] Run the program with M Kwords of memory for
+%processor 0.
+\item[{\fexec +ss}] Print summary statistics about chare creation.  This option
+prints the total number of chare creation requests, and the total number of
+chare creation requests processed across all processors.
+\item[{\fexec +cs}] Print statistics about the number of create chare messages
+requested and processed, the number of messages for chares requested and 
+processed, and the number of messages for branch office chares requested and
+processed, on a per processor basis.  Note that the number of messages 
+created and processed for a particular type of message on a given node 
+may not be the same, since a message may be processed by a different
+processor from the one originating the request.
+\item[{\fexec +mems}] Print the Memory Usage Statistics at the end, including
+the number of memory allocation requests and memory free requests, based on
+the size of the memory allocated or freed.
+\item[{\fexec user\_options}] Options that are be interpreted by the user
+program may be included after all the system options. 
+However, {\fexec user\_options} cannot start with +.
+The {\fexec user\_options} will be passed as arguments to the user program 
+via the usual {\fcmd argc/argv} construct to the {\fcmd main}\index{main}
+entry point of the main chare. 
+Charm system options will not appear in {\fcmd argc/argv}.
+\end{description}
+
+\subsubsection[Additional Uniprocessor Command Line Options]
+{Additional Uniprocessor Command Line Options}
+\label{uniprocessor command line options}
+
+The uniprocessor versions can be used to simulate multiple
+processors on a single workstation\index{uniprocessor command line
+options}.  Any number of processors between 1 and 32 can be simulated by
+using the {\fexec +p} option, limited only by the available memory on the
+uniprocessor workstation.  By default, the uniprocessor versions handle
+a single message from each processor, going in order from processor 0
+thru $P-1$ (where $P$ is the number of processors) repeatedly.  
+%If the
+%user supplies the {\fexec +seed} \index{+seed} command line option
+%followed by an 
+%integer value, the processors will be accessed in a random (but
+%deterministic) order.  {\fexec +seed} is only recognized by the
+%uniprocessor version.
+
+\subsubsection[Additional Network Command Line Options]
+{Additional Network Command Line Options}
+\label{network command line options}
+
+The following {\fexec ++} command line options are available in
+the network version\index{network command line options}:
+\begin{description}
+\item[{\fexec ++debug}] Run each node under gdb in an xterm window, prompting
+the user to begin execution.
+\index{++debug}
+\item[{\fexec ++debug-no-pause}] Run each node under gdb in an xterm window
+immediately (i.e. without prompting the user to begin execution).
+\index{++debug-no-pause}
+\item[{\fexec ++maxrsh}] Maximum number of {\fcmd rsh}'s to run at a
+time.
+\index{++maxrsh}
+\item[{\fexec ++resend-wait}] Timeout before retransmitting datagrams
+(in msec).
+\index{++resend-wait}
+\item[{\fexec ++resend-fail}] Timeout before retransmission fails (in
+msec).\index{++resend-fail}
+This parameter can help the user kill ``runaway'' processes, which may not
+be killed otherwise when the user interrupts the program before it 
+completes execution.
+Currently a bug exists in the network version that may cause programs to
+terminate prematurely if this value is set too low and {\fexec scanf} 
+operations are being performed.
+
+\item[{\fexec ++nodesfile}] File containing list of nodes.
+\index{++nodesfile}\index{.nodes}\index{nodes file}
+\end{description}
+
+If using the {\fexec ++debug} option, the user must ensure the
+following:
+\index{++debug}
+\begin{enumerate}
+\item {\fexec xterm} and {\fexec gdb} must be in the user's path.
+\item The path must be set in the {\fexec .cshrc} file, not the {\fexec .login}
+file, because {\fexec rsh} does not run the {\fexec .login} file. 
+\item The nodes must be authorized to create windows on the host machine (see
+man page for {\fexec xhost}).
+\end{enumerate}
