--- a/doc/install/run.tex
+++ b/doc/install/run.tex
@@ -12,7 +12,10 @@
 % REVISION HISTORY:
 %
 % $Log$
-% Revision 1.2  1995-11-16 19:05:03  milind
+% Revision 1.3  1995-11-16 20:58:57  brunner
+% Added some paragon information
+%
+% Revision 1.2  1995/11/16  19:05:03  milind
 % *** empty log message ***
 %
 % Revision 1.1  1995/10/31  22:27:53  milind
@@ -47,7 +50,13 @@ command line options is in Section~\ref{command line options}.
 	\end{tabbing}
 	runs {\fparm pgm} on a hypercube of dimension 4 (i.e. on 16 processors). 
 
-\item \underline{\bf Paragon:} 
+\item \underline{\bf Paragon running SunMos:} 
+	\begin{tabbing}
+	{\fexec yod -sz 4 pgm}
+	\end{tabbing}
+	runs {\fparm pgm} on four processors.
+
+\item \underline{\bf Paragon running OSF:} 
 	\begin{tabbing}
 	{\fexec pexec pgm -sz 4}
 	\end{tabbing}
