added ack and date on title page. removed ldb section.

--- a/doc/converse/manual.tex
+++ b/doc/converse/manual.tex
@@ -36,18 +36,34 @@
 \evensidemargin 0.25in
 \parskip 0.1in
 
-\title{{\bf Converse API Reference}}
-
-\author{}
-
-\date{ }
-
 \makeindex
 
 \begin{document}
 
-\maketitle
- 
+\begin{titlepage}
+\vspace*{2in}
+\Huge
+\begin{center}
+Converse\\
+Programming\\
+Manual\\
+\vspace*{0.7in}
+\today
+\end{center}
+\normalsize
+
+\vspace*{2.5in}
+\Large
+
+Converse Parallel Programming Environment was developed as a group
+effort at Parallel Programming Laboratoty, University of Illinois at
+Urbana-Champaign.  The team consisted of Attila Gursoy, Sanjeev
+Krishnan, Joshua Yelon, Milind Bhandarkar, Narain Jagathesan, Robert
+Brunner and Laxmikant Kale.
+
+\normalsize
+\end{titlepage}
+
 \tableofcontents
 
 \input{scheduler}
@@ -62,7 +78,7 @@ for languages that support threads and tag-based message retrieval.
 \input{threads}
 %\input{thsync}
 \input{cpvmacros}
-\input{ldb}
+%\input{ldb}
 \input{index}
 
 \end{document}
