removed hardwired reference.

--- a/doc/converse/cmi.tex
+++ b/doc/converse/cmi.tex
@@ -273,7 +273,7 @@ parallel program is being run.}
 \desc{Returns the logical processor identifier of processor on which the 
 caller resides. A processor Id is between \param{0} and \param{CmiNumPe()-1}.}
 
-Also see the calls in section 4.2 % put a ref here..??
+Also see the calls in Section~\ref{utility}.  % put a ref here..??
 
 \section{Memory Management}
 
