--- a/doc/converse/cpvmacros.tex
+++ b/doc/converse/cpvmacros.tex
@@ -12,7 +12,10 @@
 % REVISION HISTORY:
 %
 % $Log$
-% Revision 1.4  1995-11-01 21:16:23  milind
+% Revision 1.5  1995-11-16 22:11:11  milind
+% removed hardwired reference.
+%
+% Revision 1.4  1995/11/01  21:16:23  milind
 % Added index entries.
 %
 % Revision 1.3  1995/10/30  17:33:54  milind
@@ -164,6 +167,7 @@ File Module1.c
 \end{figure}
 
 \section{Utility Functions}
+\label{utility}
 
 To further simplify programming with global variables on shared memory machines,
 Converse provides following functions and/or macros. \note{These functions
