--- a/doc/converse/ldb.tex
+++ b/doc/converse/ldb.tex
@@ -43,7 +43,7 @@ issued, one hands it over to the load balancing module using function
 different use of the parameter \param{ldb}. Some of the currently
 implemented language specific load balancing strategies use this area
 in the message for sending the load information on local processor
-piggybacked onto the message periodically; some of them may not need
+piggy-backed onto the message periodically; some of them may not need
 this area at all. \note{The only ldb strategy available to converse
 users currently, i.e. random, does not use this area and the user could
 specify \param{void * (0))} there.}
