--- a/doc/converse/manual.tex
+++ b/doc/converse/manual.tex
@@ -56,7 +56,7 @@ Manual\\
 \Large
 
 Converse Parallel Programming Environment was developed as a group
-effort at Parallel Programming Laboratoty, University of Illinois at
+effort at Parallel Programming Laboratory, University of Illinois at
 Urbana-Champaign.  The team consisted of Attila Gursoy, Sanjeev
 Krishnan, Joshua Yelon, Milind Bhandarkar, Narain Jagathesan, Robert
 Brunner and Laxmikant Kale.
